Refactored method for getting current price